scrollbar webapp fix

--- a/buurtboer-webapp/src/Views/Stylesheets/GeneralStyles.module.css
+++ b/buurtboer-webapp/src/Views/Stylesheets/GeneralStyles.module.css
@@ -3,12 +3,16 @@
     text-align: center;
   }
 
+  body{
+    overflow:hidden;
+  }
+
   .container {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    scale: 1.8;
+    scale: 1.7;
   }
 
   .register_container{
